--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
-title:            Scribble
+title:            Catlog
 description:      A jekyll theme. Because I scribble.
 url:              # Site url.
 signoff:          # Your name.
-disqus_shortname: # disqus comment thread for post header options. ( leave blank if unwanted. )
+disqus_shortname: catlog
 facebook_appid:   # appid for like button, remove from /_includes/share.html if unwanted.
-google_analytics: # set tracking, remove from /javascripts/basic.js if unwanted.
+google_analytics: UA-54358039-1
 
 links:
   - name:         About
     url:          /about
-  - name:         Blog
-    url:          http://muan.co
-    external:     true
   - name:         Email
     url:          mailto:hello@muan.co
     external:     true
   - name:         GitHub
-    url:          http://github.com/muan
+    url:          https://github.com/aiasfina
+    external:     true
+  - name:         OSChina
+    url:          http://muan.co
     external:     true
 highlighter:      pygments
 permalink:        pretty
